--- a/feelpp/focal/debian/rules
+++ b/feelpp/focal/debian/rules
@@ -24,8 +24,8 @@ export DEB_CXXFLAGS_MAINT_APPEND  = -Wno-inconsistent-missing-override -Wno-unde
 NUMJOBS:=$(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS))) 
 
 extra_flags += \
- -DCMAKE_C_COMPILER=/usr/bin/clang-9 \
- -DCMAKE_CXX_COMPILER=/usr/bin/clang++-9\
+ -DCMAKE_C_COMPILER=/usr/bin/clang \
+ -DCMAKE_CXX_COMPILER=/usr/bin/clang++ \
  -DCMAKE_VERBOSE_MAKEFILE=ON \
  -DCMAKE_BUILD_TYPE=Release \
  -DFEELPP_PYTHON_VERSION=3 \
@@ -38,6 +38,12 @@ extra_flags += \
  -DLIBMONGOC_DIR=/usr
 
 extra_flags += \
+ -DCMAKE_C_FLAGS:STRING="-DNDEBUG -O2 -Wdate-time -D_FORTIFY_SOURCE=2 " \
+ -DCMAKE_C_FLAGS_DEBUG:STRING="" \
+ -DCMAKE_C_FLAGS_RELEASE:STRING="-DNDEBUG -O3" \
+ -DCMAKE_CXX_FLAGS:STRING="-DNDEBUG -O2 -Wdate-time -D_FORTIFY_SOURCE=2 " \
+ -DCMAKE_CXX_FLAGS_DEBUG:STRING="" \
+ -DCMAKE_CXX_FLAGS_RELEASE:STRING="-DNDEBUG -O3" \
  -DCMAKE_EXE_LINKER_FLAGS:STRING="-Wl,--no-as-needed -lm -lrt"
 
 override_dh_auto_configure:
